--- a/16_변수_산술연산자.md
+++ b/16_변수_산술연산자.md
@@ -1,9 +1,9 @@
 # 변수 
 
 이름이 붙여진 기억공간   
-2는 **정수형**
-3.14159는 **실수형**   
-"Hello, World!"는 **문자열**
+2는 **정수형**  
+3.14159는 **실수형**     
+"Hello, World!"는 **문자열**  
 ```
 name = "lewis"
 ```
@@ -21,14 +21,18 @@ b? 				b는 a값의 변동과 상관없이 여전히 35를 기억하고 있다.
  > ### =  vs  ==
  위의 예제에 a = 35는 35를 a에 대입한다라고 표현할 수 있다.  
  ==은 좌변과 우변이 서로 같은지 비교하는 연산자이다.  
-두 연산자를 혼동하여 원하는 결과값을 도출하지 못하는 경우가 많다.     
-if ( a == 3 ) : 
-   print("a는 3이 맞습니다.")
-a와 3을 비교하여 값이 서로 같다면 if 조건문에 만족하여 다음 코드를 진행한다.   
+두 연산자를 혼동하여 원하는 결과값을 도출하지 못하는 경우가 많다. 
+
+>if ( a == 3 ) :    
+   print("a는 3이 맞습니다.")   
+   
+>a와 3을 비교하여 값이 서로 같다면 if 조건문에 만족하여 다음 코드를 진행한다.  
 하지만, ==을 혼동하여 =으로 사용할 경우,  
-if ( a = 3 ):
+
+>if ( a = 3 ):  
    print("a에 3을 할당합니다.")    
-if조건절은 a에 3을 대입하기 때문에 `if( 3)` 과 같다.     
+   
+>if조건절은 a에 3을 대입하기 때문에 `if( 3)` 과 같다.    
 0이 아닌 모든 수는 true값을 가지기 때문에 `if( true)`  
 즉, 조건을 만족하기 때문에 a에 어떤 값이 들어있었던지에 상관없이  
 "a에 3을 할당합니다."가 출력된다.   
@@ -39,7 +43,9 @@ var1 = 45
 var2 = var1
 var3 = 45
 ```
-45라는 값을 가지는 변수 3개가 있다. 파이썬에서는 상수값에 대해 주소를 부여해두었기 때문에 var1, var2, var3은 모두 같은 주소값을 참조한다.   
+45라는 값을 가지는 변수 3개가 있다.  
+파이썬에서는 상수값에 대해 주소를 부여해두었기 때문에  
+var1, var2, var3은 모두 같은 주소값을 참조한다.   
 
 사과를 쳐다보고 있는 사람1이 있다. 사람2는 사람1이 쳐다보고 있는 것을 쳐다본다. 사람3도 사과를 쳐다본다. 사람 3명은 모두 사과를 쳐다보고 있는 상황이다. 사람1이 더 이상 사과를 쳐다보지 않고 귤을 쳐다본다고 해서 사람2가 따라서 귤을 쳐다보지 않는다. 사람2는 사과를 계속 쳐다보고 있다. 
 
@@ -59,6 +65,7 @@ var3 = 45
 **예약어**   
 키워드라고도 한다. 예약어는 파이썬의 구문을 정의하는데 사용되기 때문에 사용할 수 없다. 
 
+<pre>
 False, class, finally, is, return,
 None, continue, for, lambda, try,
 True, def, from, nonlocal, while,
@@ -66,7 +73,7 @@ and, del, global, not, with,
 as, elif, if, or, yield,
 assert, else, import, pass,
 break, except, in, raise   
-
+</pre>
 
 ### 변수의 입력과 출력  
 ```
@@ -101,9 +108,9 @@ str
 ```  
 input 함수 자체를 바로 int (  ) 로 감싸서 형변환을 시켜줄 수 있다.  
 
----
+-
 
-### 산술 연산자 
+# 산술 연산자 
 
 연산자|설명|예|결과
 ---|---|---|---|
