--- a/16_변수_산술연산자.md
+++ b/16_변수_산술연산자.md
@@ -51,7 +51,7 @@ var1, var2, var3은 모두 같은 주소값을 참조한다.
 
 큰 숫자의 경우 메모리 주소값이 새롭게 할당된다.
 
-### 변수의 이름 제한  
+### #변수의 이름 제한  
 
 변수명에 사용가능한 문자
 
@@ -62,7 +62,7 @@ var1, var2, var3은 모두 같은 주소값을 참조한다.
 
 변수명은 숫자로 시작될 수 없다. 파이썬 버전 3에서는 한글로도 변수명을 설정할 수 있지만 권장하지 않는다.  
 
-**예약어**   
+### #예약어   
 키워드라고도 한다. 예약어는 파이썬의 구문을 정의하는데 사용되기 때문에 사용할 수 없다. 
 
 <pre>
@@ -75,7 +75,7 @@ assert, else, import, pass,
 break, except, in, raise   
 </pre>
 
-### 변수의 입력과 출력  
+### #변수의 입력과 출력  
 ```
 name = input()
 ```
