리턴값까지 추가

--- a/22_함수.md
+++ b/22_함수.md
@@ -1,1 +1,155 @@
-추가예정
+# 함수
+반복적인 작업을 하는 코드를 재사용이 가능하게 정의해 놓은 것
+```
+def 함수이름(매개변수):
+      동작
+```
+> 매개변수 : parameter, 파라미터라고도 많이 표현한다.  
+
+### 함수의 정의, 실행
+
+```
+함수 정의
+>>> def func():
+		print('call func')
+
+함수 실행( 함수를 호출한다고도 표현한다. )
+>>> func()
+call func
+```
+
+### 함수의 종류
+- 시스템 정의 함수 ( == 내장함수: built-in function)
+- 사용자 정의 함수 (user defined function)
+
+### 시스템 정의 함수
+시스템 자체에서 제공해주는 함수  
+어떤 함수들은 모듈을 import한 후 사용 가능하다.  
+
+![built-in](http://www.londonacademyofit.co.uk/learning-blog/images/1007/python_built_in_functions.png)
+
+다양한 함수들이 존재하는데 이 중 친숙한 함수들도 보인다.  
+
+```
+dict()
+float()
+format()
+id()
+input()
+int()
+len()
+list()
+print()
+range()
+tuple()
+zip()
+이 함수들도 시스템 정의 함수이다. 
+```
+시스템 함수는 이미 정의가 되어있기 때문에 사용자는 `호출만으로` 사용할 수 있다.  
+
+### 사용자 정의 함수  
+시스템에서 정의되지 않은 동작을 실행하고자 할 때 사용자는 직접 함수를 구현할 수 있다.  
+
+시스템 정의함수에서 sum()은 순회가능한 데이터를 매개변수로 취한다. 그리고 내부 값을 다 더해서 반환해준다.
+
+```
+시스템 정의 함수  sum()
+>>> s_list = [1, 2, 3]
+>>> print(sum(s_list))
+6
+```
+내부 데이터를 다 더하는 것이 아니라 다 곱하는 함수가 시스템 함수로 정의되어 있지 않아 직접 구현해 볼 수도 있다. 
+```
+사용자 정의 함수
+>>> def mul(m_list):
+		result = 1
+		for item in m_list:
+			result = result * item 
+		return result
+
+>>> temp_list = [4, 5, 6]
+>>> mul(temp_list)
+120
+```
+데이터를 화면에 출력할 때 print를 쓰듯이,  
+사용자 정의 함수를 직접 구현해놓으면 필요할 때마다 호출하여 사용할 수 있다.  
+
+### 매개변수 vs 인자
+```
+# 함수 정의때는 매개변수
+def func(매개변수1, 매개변수2):
+  ...
+
+# 함수 호출시에는 인자
+>>> func(인자1, 인자2)
+```
+둘 다 외부에서 넘겨받는 데이터를 말하지만,  
+매개변수는 정의할 때,   
+인자는 호출할 때, 넘겨주는 데이터를 말한다.  
+
+### 리턴값이 있는 함수 정의
+> 리턴값 : 함수가 호출된 곳으로 함수가 넘겨주는 데이터   
+
+- 함수는 `한개 이상의` return을 포함할 수 있다.   
+- return값이 `여러 개인 경우 tuple형식`으로 전달된다.  
+- return을 만나면 즉시 return구문에 있는 데이터를 반환하고 함수를 종료한다.  
+- 만약 return이 존재하지 않다면 함수 내용 끝까지 수행하고 함수가 종료된다.
+
+```
+return을 사용하는 이유. 
+함수를 호출할 때 함수를 통해 얻는 결과 데이터를 사용하기 위해서이다.
+
+엄마가 나에게 마트에서 콩나물을 사오라고 심부름을 시켰다.  (함수)
+만원을 받았다. (인자)   
+마트에 가서 콩나물을 샀다 (함수동작)
+집에 와서 엄마한테 콩나물을 돌려주었다.(리턴)
+
+def 심부름( 돈 ) :
+	마트에 간다.
+	콩나물을 산다.
+	집으로 돌아온다.
+	
+	return 콩나물
+	
+요리재료 = 심부름(10000)
+요리재료(콩나물)을 가지고 요리한다.  
+```
+엄마는 콩나물을 받아서 요리를 하기 위해서 심부름을 보냈다.  
+
+### 리턴값이 없는 함수
+만약 엄마가 "콩나물 사와서 너가 요리해" 라고 했다면 리턴값이 존재하지 않는다.
+
+```
+def 심부름( 돈 ) :
+	마트에 간다.
+	콩나물을 산다.
+	집으로 돌아온다.
+	요리를 한다.
+```
+엄마한테 콩나물을 돌려주지 않아도 되기 때문에 return이 필요하지 않다. 
+
+### 리턴값 코드로 표현
+두 개의 정수의 곱을 계산해주는 함수를 구현해보자.  
+```
+리턴이 없는 경우
+
+a = 5
+b = 4
+def mul(num1, num2):
+    result = num1 * num2
+    print('{} x {} = {}'.fomat(num1, num2, result))
+```
+
+```
+리턴이 있는 경우
+
+a = 5
+b = 4
+def mul(num1, num2):
+    temp_result = num1 * num2
+    return temp_result              #두 수의 곱을 반환한다.
+
+result = mul(a, b)                #반환된 데이터를 result에 입력한다.
+print('{} x {} = {}'.fomat(a, b, result))
+```
+결국 결과 데이터를 어디서 사용할지에 따라서 구현 방식이 달라진다. 
