위치 키워드 인자까지 추가

--- a/22_함수.md
+++ b/22_함수.md
@@ -153,3 +153,160 @@ result = mul(a, b)                #반환된 데이터를 result에 입력한다
 print('{} x {} = {}'.fomat(a, b, result))
 ```
 결국 결과 데이터를 어디서 사용할지에 따라서 구현 방식이 달라진다. 
+
+-
+
+### 위치 인자 (positional arguments)
+함수에 정의된 매개변수 순서대로 인자값을 전달한다.
+```
+#딕셔너리 데이터를 리턴해주는 함수의 정의
+def get_student(name, age, gender):
+	new_student = {
+		'name': name,
+		'age': age,
+		'gender': gender,
+	}
+	return new_student
+```
+위에 정의된 함수를 호출할 때 인자값을 name, age, gender의 순서에 맞게 입력해야한다. 
+```
+>>> student_1 = get_student('lewis', 28, 'male')
+>>> print(student_1)
+{'age': 28, 'gender': 'male', 'name': 'lewis'}
+```
+이렇게 함수를 호출하면 리턴값이 student_1에 입력된다. 
+> 출력되는 순서가 입력된 순서와 다른 이유는 `딕셔너리 데이터`이기 때문이다. 딕셔너리는 순서값을 가지지 않는다.  
+
+-
+
+### 키워드 인자 (keyword arguments)
+정의된 매개변수 순서와 상관없이 키워드를 통해 전달된다. 
+```
+>>> student_1 = get_student(age=28, name='lewis', gender='male')
+>>> print(student_1)
+{'age': 28, 'gender': 'male', 'name': 'lewis'}
+```
+
+-
+
+### 위치 + 키워드 인자
+>동시에 쓰는 경우 `위치인자가 먼저` 와야 한다.   
+
+```
+def student(name, age, gender, cls='WPS'):
+	new_student = {
+		'name': name,
+		'age': age,
+		'gender': gender,
+		'cls': cls,
+	}
+	return new_student
+```
+cls는 위치인자가 아니라 키워드 인자다.  
+함수 호출 시 cls의 값이 정해지지 않는다면 기본값으로 'WPS'을 가진다.   
+학생 정보를 입력하는데 별 다른 언급이 없다면 WPS class에 소속된 학생이라고 간주힌다.  
+```
+>>> student_1 = get_student('lewis', 28, 'male')
+>>> print(student_1)
+{'age': 28, 'gender': 'male', 'name': 'lewis', 'cls' = 'WPS'}
+```
+출력값의 마지막에 'cls'='WPS'가 주어진 것을 볼 수 있다.  
+
+cls위치에 값을 추가할 경우 입력된 값으로 cls가 지정된다.  
+```
+>>> student_1 = get_student('lewis', 28, 'male', 'FES')
+>>> print(student_1)
+{'age': 28, 'gender': 'male', 'name': 'lewis', 'cls' = 'FES'}
+```
+'FES'라고 입력한 것이 cls에 입력된 것을 확인할 수 있다.  
+
+-
+
+### 기본 매개변수값의 정의 시점
+
+기본 매개변수값은 함수가 실행될 때 마다 계산되지 않고, 함수가 정의되는 시점에 계산되어 계속해서 사용된다.
+```
+>>> def return_list(value, result=[]):
+...   result.append(value)
+...   return result
+... 
+>>> return_list('apple')
+['apple']
+>>> return_list('banana')
+['apple', 'banana']
+```
+함수가 실행되는 시점에 기본 매개변수값을 계산하기 위해, 아래와 같이 바꿔준다.
+
+```
+>>> def return_list(value, result=None):
+...   if result is None:
+...     result = []
+...   result.append(value)
+...   return result
+... 
+>>> return_list('apple')
+['apple']
+>>> return_list('banana')
+['banana']
+```
+이 개념은 그림 그려서 추가하겠습니다~  
+
+-
+
+### 위치인자 묶음
+
+함수에 위치인자로 주어진 변수들의 묶음은 *매개변수명으로 사용할 수 있다.   
+관용적으로 `*args`를 사용한다.
+```
+>>> def print_args(*args):
+    		print(args)
+
+>>> result = print_args(1, 2, 'abc', ['apple', 'banana'])
+>>> print(result)
+(1, 2, 'abc', ['apple', 'banana'])  
+
+>>> print(len(result))
+4
+```
+*args는 여러개의 데이터를 받아서 튜플 형식으로 만들어준다.  
+
+-
+
+### 키워드인자 묶음
+
+함수에 키워드인자로 주어진 변수들의 묶음은 **매개변수명으로 사용할 수 있다.    
+관용적으로 `**kwargs`를 사용한다.
+```
+>>> def print_kwargs(**kwargs):
+    		print(kwargs)
+>>> print_kwargs(name='kym', gender='male')
+{'name': 'kym', 'gender': 'male'}
+```
+
+### *args 활용
+다양한 방법으로 활용해볼 수 있지만 위에 있던 return_list 함수를 재정의해보자.  
+```
+def return_list(*args):
+	if len(args) == 1:
+		result = []
+		result.append(args[0])
+		return result
+	elif len(args) == 2:
+		args[1].append(args[0])
+		print('{}를 추가했습니다.'.format(args[0])
+		return args[1]
+	else:
+		print('인자가 너무 많거나 없습니다.')
+```
+len(args)는 return_list의 인자 개수가 몇개인지 리턴해준다.  
+
+1개가 들어올 경우 추가하려고 하는 리스트 없이 value만 들어온 상태이기 때문에 빈 리스트에 값을 추가하고 return해준다.  
+
+2개가 들어올 경우 뒤에 첫 인자를 value, 두번째 인자를 list로 판단하여 두번째 인자에 value를 추가한다. 
+
+
+
+
+
+
+
