--- a/22_함수.md
+++ b/22_함수.md
@@ -6,7 +6,7 @@ def 함수이름(매개변수):
 ```
 > 매개변수 : parameter, 파라미터라고도 많이 표현한다.  
 
-### 함수의 정의, 실행
+### `함수의 정의, 실행`
 
 ```
 함수 정의
@@ -18,7 +18,7 @@ def 함수이름(매개변수):
 call func
 ```
 
-### 함수의 종류
+### `함수의 종류`
 - 시스템 정의 함수 ( == 내장함수: built-in function)
 - 사용자 정의 함수 (user defined function)
 
