위치 키워드 인자까지 추가

--- a/22_함수.md
+++ b/22_함수.md
@@ -6,7 +6,9 @@ def 함수이름(매개변수):
 ```
 > 매개변수 : parameter, 파라미터라고도 많이 표현한다.  
 
-### `함수의 정의, 실행`
+-
+
+### 함수의 정의, 실행
 
 ```
 함수 정의
@@ -17,10 +19,13 @@ def 함수이름(매개변수):
 >>> func()
 call func
 ```
+-
 
-### `함수의 종류`
+### 함수의 종류
 - 시스템 정의 함수 ( == 내장함수: built-in function)
 - 사용자 정의 함수 (user defined function)
+
+-
 
 ### 시스템 정의 함수
 시스템 자체에서 제공해주는 함수  
@@ -46,6 +51,8 @@ zip()
 이 함수들도 시스템 정의 함수이다. 
 ```
 시스템 함수는 이미 정의가 되어있기 때문에 사용자는 `호출만으로` 사용할 수 있다.  
+
+-
 
 ### 사용자 정의 함수  
 시스템에서 정의되지 않은 동작을 실행하고자 할 때 사용자는 직접 함수를 구현할 수 있다.  
@@ -74,6 +81,8 @@ zip()
 데이터를 화면에 출력할 때 print를 쓰듯이,  
 사용자 정의 함수를 직접 구현해놓으면 필요할 때마다 호출하여 사용할 수 있다.  
 
+-
+
 ### 매개변수 vs 인자
 ```
 # 함수 정의때는 매개변수
@@ -86,6 +95,8 @@ def func(매개변수1, 매개변수2):
 둘 다 외부에서 넘겨받는 데이터를 말하지만,  
 매개변수는 정의할 때,   
 인자는 호출할 때, 넘겨주는 데이터를 말한다.  
+
+-
 
 ### 리턴값이 있는 함수 정의
 > 리턴값 : 함수가 호출된 곳으로 함수가 넘겨주는 데이터   
@@ -116,6 +127,8 @@ def 심부름( 돈 ) :
 ```
 엄마는 콩나물을 받아서 요리를 하기 위해서 심부름을 보냈다.  
 
+-
+
 ### 리턴값이 없는 함수
 만약 엄마가 "콩나물 사와서 너가 요리해" 라고 했다면 리턴값이 존재하지 않는다.
 
@@ -127,6 +140,8 @@ def 심부름( 돈 ) :
 	요리를 한다.
 ```
 엄마한테 콩나물을 돌려주지 않아도 되기 때문에 return이 필요하지 않다. 
+
+-
 
 ### 리턴값 코드로 표현
 두 개의 정수의 곱을 계산해주는 함수를 구현해보자.  
