위치인자 수정

--- a/22_함수.md
+++ b/22_함수.md
@@ -312,6 +312,26 @@ def return_list(*args):
 		return args[1]
 	else:
 		print('인자가 너무 많거나 없습니다.')
+
+>>> return_list(11)
+[11]
+>>> return_list('abc')
+['abc']
+
+>>> plist = ['lewis', 28]
+>>> return_list('male', plist)
+'male'을 추가했습니다.
+>>> print(plist)
+['lewis', 28, 'male']
+
+>>> return_list('WPS', plist)
+'WPS'를 추가했습니다.
+>>> print(plist)
+['lewis', 28, 'male', 'WPS']
+
+>>> return_list('apple', 'melon', plist)
+인자가 너무 많거나 없습니다.
+
 ```
 len(args)는 return_list의 인자 개수가 몇개인지 리턴해준다.  
 
