코드블럭 python으로 변경

--- a/22_함수.md
+++ b/22_함수.md
@@ -1,6 +1,6 @@
 # 함수
 반복적인 작업을 하는 코드를 재사용이 가능하게 정의해 놓은 것
-```
+```python
 def 함수이름(매개변수):
       동작
 ```
@@ -10,12 +10,12 @@ def 함수이름(매개변수):
 
 ### 함수의 정의, 실행
 
-```
-함수 정의
+```python
+#함수 정의
 >>> def func():
 		print('call func')
 
-함수 실행( 함수를 호출한다고도 표현한다. )
+#함수 실행( 함수를 호출한다고도 표현한다. )
 >>> func()
 call func
 ```
@@ -59,15 +59,15 @@ zip()
 
 시스템 정의함수에서 sum()은 순회가능한 데이터를 매개변수로 취한다. 그리고 내부 값을 다 더해서 반환해준다.
 
-```
-시스템 정의 함수  sum()
+```python
+#시스템 정의 함수  sum()
 >>> s_list = [1, 2, 3]
 >>> print(sum(s_list))
 6
 ```
 내부 데이터를 다 더하는 것이 아니라 다 곱하는 함수가 시스템 함수로 정의되어 있지 않아 직접 구현해 볼 수도 있다. 
-```
-사용자 정의 함수
+```python
+#사용자 정의 함수
 >>> def mul(m_list):
 		result = 1
 		for item in m_list:
@@ -84,7 +84,7 @@ zip()
 -
 
 ### 매개변수 vs 인자
-```
+```python
 # 함수 정의때는 매개변수
 def func(매개변수1, 매개변수2):
   ...
@@ -106,7 +106,7 @@ def func(매개변수1, 매개변수2):
 - return을 만나면 즉시 return구문에 있는 데이터를 반환하고 함수를 종료한다.  
 - 만약 return이 존재하지 않다면 함수 내용 끝까지 수행하고 함수가 종료된다.
 
-```
+```python
 return을 사용하는 이유. 
 함수를 호출할 때 함수를 통해 얻는 결과 데이터를 사용하기 위해서이다.
 
@@ -132,7 +132,7 @@ def 심부름( 돈 ) :
 ### 리턴값이 없는 함수
 만약 엄마가 "콩나물 사와서 너가 요리해" 라고 했다면 리턴값이 존재하지 않는다.
 
-```
+```python
 def 심부름( 돈 ) :
 	마트에 간다.
 	콩나물을 산다.
@@ -145,8 +145,8 @@ def 심부름( 돈 ) :
 
 ### 리턴값 코드로 표현
 두 개의 정수의 곱을 계산해주는 함수를 구현해보자.  
-```
-리턴이 없는 경우
+```python
+#리턴이 없는 경우
 
 a = 5
 b = 4
@@ -155,8 +155,8 @@ def mul(num1, num2):
     print('{} x {} = {}'.fomat(num1, num2, result))
 ```
 
-```
-리턴이 있는 경우
+```python
+#리턴이 있는 경우
 
 a = 5
 b = 4
@@ -173,7 +173,7 @@ print('{} x {} = {}'.fomat(a, b, result))
 
 ### 위치 인자 (positional arguments)
 함수에 정의된 매개변수 순서대로 인자값을 전달한다.
-```
+```python
 #딕셔너리 데이터를 리턴해주는 함수의 정의
 def get_student(name, age, gender):
 	new_student = {
@@ -184,7 +184,7 @@ def get_student(name, age, gender):
 	return new_student
 ```
 위에 정의된 함수를 호출할 때 인자값을 name, age, gender의 순서에 맞게 입력해야한다. 
-```
+```python
 >>> student_1 = get_student('lewis', 28, 'male')
 >>> print(student_1)
 {'age': 28, 'gender': 'male', 'name': 'lewis'}
@@ -196,7 +196,7 @@ def get_student(name, age, gender):
 
 ### 키워드 인자 (keyword arguments)
 정의된 매개변수 순서와 상관없이 키워드를 통해 전달된다. 
-```
+```python
 >>> student_1 = get_student(age=28, name='lewis', gender='male')
 >>> print(student_1)
 {'age': 28, 'gender': 'male', 'name': 'lewis'}
@@ -207,7 +207,7 @@ def get_student(name, age, gender):
 ### 위치 + 키워드 인자
 >동시에 쓰는 경우 `위치인자가 먼저` 와야 한다.   
 
-```
+```python
 def student(name, age, gender, cls='WPS'):
 	new_student = {
 		'name': name,
@@ -220,7 +220,7 @@ def student(name, age, gender, cls='WPS'):
 cls는 위치인자가 아니라 키워드 인자다.  
 함수 호출 시 cls의 값이 정해지지 않는다면 기본값으로 'WPS'을 가진다.   
 학생 정보를 입력하는데 별 다른 언급이 없다면 WPS class에 소속된 학생이라고 간주힌다.  
-```
+```python
 >>> student_1 = get_student('lewis', 28, 'male')
 >>> print(student_1)
 {'age': 28, 'gender': 'male', 'name': 'lewis', 'cls' = 'WPS'}
@@ -228,7 +228,7 @@ cls는 위치인자가 아니라 키워드 인자다.
 출력값의 마지막에 'cls'='WPS'가 주어진 것을 볼 수 있다.  
 
 cls위치에 값을 추가할 경우 입력된 값으로 cls가 지정된다.  
-```
+```python
 >>> student_1 = get_student('lewis', 28, 'male', 'FES')
 >>> print(student_1)
 {'age': 28, 'gender': 'male', 'name': 'lewis', 'cls' = 'FES'}
@@ -240,7 +240,7 @@ cls위치에 값을 추가할 경우 입력된 값으로 cls가 지정된다.
 ### 기본 매개변수값의 정의 시점
 
 기본 매개변수값은 함수가 실행될 때 마다 계산되지 않고, 함수가 정의되는 시점에 계산되어 계속해서 사용된다.
-```
+```python
 >>> def return_list(value, result=[]):
 ...   result.append(value)
 ...   return result
@@ -252,7 +252,7 @@ cls위치에 값을 추가할 경우 입력된 값으로 cls가 지정된다.
 ```
 함수가 실행되는 시점에 기본 매개변수값을 계산하기 위해, 아래와 같이 바꿔준다.
 
-```
+```python
 >>> def return_list(value, result=None):
 ...   if result is None:
 ...     result = []
@@ -272,7 +272,7 @@ cls위치에 값을 추가할 경우 입력된 값으로 cls가 지정된다.
 
 함수에 위치인자로 주어진 변수들의 묶음은 *매개변수명으로 사용할 수 있다.   
 관용적으로 `*args`를 사용한다.
-```
+```python
 >>> def print_args(*args):
     		print(args)
 
@@ -291,7 +291,7 @@ cls위치에 값을 추가할 경우 입력된 값으로 cls가 지정된다.
 
 함수에 키워드인자로 주어진 변수들의 묶음은 **매개변수명으로 사용할 수 있다.    
 관용적으로 `**kwargs`를 사용한다.
-```
+```python
 >>> def print_kwargs(**kwargs):
     		print(kwargs)
 >>> print_kwargs(name='kym', gender='male')
@@ -300,7 +300,7 @@ cls위치에 값을 추가할 경우 입력된 값으로 cls가 지정된다.
 
 ### *args 활용
 다양한 방법으로 활용해볼 수 있지만 위에 있던 return_list 함수를 재정의해보자.  
-```
+```python
 def return_list(*args):
 	if len(args) == 1:
 		result = []
