예제코드 파이썬모드로 변경

--- a/16_변수_산술연산자.md
+++ b/16_변수_산술연산자.md
@@ -38,7 +38,7 @@ b? 				b는 a값의 변동과 상관없이 여전히 35를 기억하고 있다.
 "a에 3을 할당합니다."가 출력된다.   
 
 파이썬에서는  자주 사용하는 값에 대해서 미리 주소값을 부여해놓는다.  
-```
+```python
 var1 = 45
 var2 = var1
 var3 = 45
@@ -76,7 +76,7 @@ break, except, in, raise
 </pre>
 
 ### #변수의 입력과 출력  
-```
+```python
 name = input()
 ```
 input함수가 호출되면 시스템은 입력 받을 준비를 한다.  
@@ -87,7 +87,7 @@ input함수가 호출되면 시스템은 입력 받을 준비를 한다.
 입력 받을 준비를 하면서 메시지를 띄워줄 수 있다. lewis라고 사용자가 입력하면 name이라는 변수에 "lewis"라는 문자열이 들어간다.  
 
 **input()함수는 기본적으로 문자열로 반환한다.**
-``` 
+```python
 >>> age = input("나이를 입력하세요 : ")   
 나이를 입력하세요 : 28  
 >>> type(age)
@@ -96,13 +96,13 @@ str
 분명 28이라고 숫자를 입력했지만 age는 int형태가 아니라 str형태로 입력되었다. 두명의 나이를 입력받아 평균 나이를 구한다고 생각해보면 28과 30이 입력됐을 경우 58을 기대하겠지만 결과는 2830이다.  
 
 **형변환이 필요하다.**   
-```
+```python
 >>> age = input("나이를 입력하세요 : ")   
 나이를 입력하세요 : 28  
 >>> int(age)
 ``` 
 혹은
-```
+```python
 >>> age = int(input("나이를 입력하세요 : "))   
 나이를 입력하세요 : 28
 ```  
