--- a/19_딕셔너리.md
+++ b/19_딕셔너리.md
@@ -7,7 +7,7 @@ Key-Value형태로 항목을 가지는 자료구조.
 
 ### 딕셔너리 생성
 
-<pre>
+```python
 >>> empty_dict1 = {}
 >>> empty_dict2 = dict()
 >>> days = { 'Sun':'Sunday', 'Mon':'Monday' , 'Tue':'Tuesday', 
@@ -16,24 +16,24 @@ Key-Value형태로 항목을 가지는 자료구조.
 'Sunday'
 >>> days['Fri']
 'Friday'
-</pre>
+```
 
 days['Sun']이라고 입력했을 때 값이 존재해야 출력해준다.   
 만약 존재하지 않을 경우 해당 아이템이 key값으로 **추가된다.** 
 
-<pre>
+```python
 >>> days['Mon'] = 'Monday'
-</pre>
+```
 Mon이 기존에 존재하지 않으므로 새로운 값을 추가한다.  
 만약 Mon이 존재한다면 Mon에 대한 값이 'Monday'로 변경된다.  
 
 ### 딕셔너리 개수
 
 리스트와 튜플과 마찬가지로 len함수를 사용한다. 
-<pre>
+```python
 >>>len(days)
 6
-</pre>
+```
 전체 키-값의 형태가 몇개가 존재하는지 출력해준다.  
 
 
@@ -41,24 +41,24 @@ Mon이 기존에 존재하지 않으므로 새로운 값을 추가한다.
 
 dict 함수를 사용, 두 값의 시퀀스(리스트 또는 튜플)을 딕셔너리로 변환 한다.
 
-<pre>
+```python
 >>> sample = [[1,2], [3,4], [5,6]]
 >>> dict(sample)
 {1: 2, 3: 4, 5: 6}
-</pre>
+```
 
 ### 키 값 존재여부
 
 리스트와 튜플과 마찬가지로 in을 이용하여 존재여부를 판단한다.  
-<pre>
+```python
 >>> 'Mon' in days
 True
 >>> 'Oct' in days
 False
-</pre>
+```
 
 ### 결합 (update)
-<pre>
+```python
 >>> item_dict = {
 ... 'Doran\'s Ring': 400,
 ... 'Doran\'s Blade': 450,
@@ -68,15 +68,15 @@ False
 >>> com_dict.update(champion_dict)   ## com_dict + champion_dict
 >>> com_dict.update(item_dict)       ## com_dict + item_dict
 >>> com_dict
-</pre>
+```
 
 서로 같은 키가 있을 경우, update에 주어진 딕셔너리의 값이 할당된다.
 ### 삭제 (del)
-<pre>
+```python
 >>> del com_dict['Doran\'s Blade']
 >>> del com_dict['Doran\'s Ring']
 >>> del com_dict['Doran\'s Shield']
-</pre>
+```
 
 ### 전체 삭제 (clear)
 
@@ -86,27 +86,27 @@ False
 
 **keys()**  
 모든 키 얻기
-<pre>
+```python
 >>> d = {'a':0, 'b':1, 'c':2}
 >>> t = d.keys()
 >>> t
 ['a', 'b', 'c']
-</pre>
+```
 
 **values()**  
 모든 값 얻기
-<pre>
+```python
 >>> d = {'a':0, 'b':1, 'c':2}
 >>> t = d.values()
 >>> t
 [0, 1, 2]
-</pre>
+```
 
 **items()**  
 모든 키-값 얻기 (튜플로 반환)
-<pre>
+```python
 >>> d = {'a':0, 'b':1, 'c':2}
 >>> t = d.items()
 >>> t
 [('a', 0), ('c', 2), ('b', 1)]
-</pre>
+```
