복사, 언패킹 추가

--- a/18_시퀀스타입.md
+++ b/18_시퀀스타입.md
@@ -182,9 +182,45 @@ sorted는 리스트의 정렬 복사본을 반환
 [1, 2, 3, 4, 7]
 ```
 
-#### 리스트 복사 (copy)
+### 리스트 복사 (copy)
 
-`shallow copy vs. deep copy 내용 정리해서 추가예정.`
+- 단순객체복사 
+- 얕은 복사(shallow copy) 
+- 깊은 복사(deep copy) 
+
+얕은 복사는 더 혼동을 줄 우려가 있기 때문에 지금은 생략한다.  
+
+#### 단순객체복사
+```python
+>>> list1 = [1, 2, 3]	#리스트생성
+>>> list2 = list1		#단순객체복사
+>>> print(list2)		#복사된 리스트 출력
+[1, 2, 3]
+>>> list2[1] = 5		#복사된 리스트에서 값 수정
+>>> print(list2)		
+[1, 5, 3]				#수정된 결과 확인
+>>> print(list1)		#원본 리스트 결과 확인
+[1, 5, 3]
+```
+list2는 list1의 주소값을 공유하기 때문에 list2에서 값을 수정해도 list1에 반영된다.  
+
+``
+
+#### 깊은 복사(deep copy)
+```python
+from copy import *		#모듈 파트에서 다룰 예정. copy관련 함수를 쓸 수 있다 정도만 알고 가자.
+>>> list1 = [1, 2, 3]		#리스트 생성
+>>> list2 = deepcopy(list1)	#깊은 복사
+>>> print(list2)			#복사된 리스트 출력
+[1, 2, 3]
+>>> list2[1] = 100		#list2의 요소 수정
+>>> print(list2)			#수정된 리스트 출력
+[1, 100, 3]
+>>> print(list1)			#원본 리스트 출력
+[1, 2, 3]
+
+```
+깊은 복사를 하게 되면 복사된 데이터는 새로운 주소값을 할당받게되어 서로 영향을 주지 않는다.  
 
 ---
 
@@ -212,10 +248,27 @@ sorted는 리스트의 정렬 복사본을 반환
 #### 튜플 언패킹
 
 ```python
+>>> fruits = ['apple', 'banana']
 >>> f1, f2 = fruits
+>>> print(f1)
+'apple'
+>>> print(f2)
+'banana'
+```
+좌측에 f1, f2를 두어 여러개의 변수에 동시에 값을 할당할 수 있다.  
+튜플도 동일한 방법으로 언패킹이 가능하다.  
+```python
+>>> colors = ('red', 'blue')
+>>> c1, c2 = colors
+>>> print(c1)
+'red'
+>>> print(c2)
+`blue'
 ```
 
-`언패킹도 자세하게 정리해서 업로드 예정`
+>언패킹은 반복문과 궁합이 잘 맞다. 반복문 파트에서 코드예제를 추가하겠다.
+
+-
 
 #### 형 변환
 
