복사, 언패킹 추가

--- a/18_시퀀스타입.md
+++ b/18_시퀀스타입.md
@@ -247,16 +247,7 @@ from copy import *		#모듈 파트에서 다룰 예정. copy관련 함수를 쓸
 
 #### 튜플 언패킹
 
-```python
->>> fruits = ['apple', 'banana']
->>> f1, f2 = fruits
->>> print(f1)
-'apple'
->>> print(f2)
-'banana'
-```
-좌측에 f1, f2를 두어 여러개의 변수에 동시에 값을 할당할 수 있다.  
-튜플도 동일한 방법으로 언패킹이 가능하다.  
+좌측에 c1, c2를 두어 여러개의 변수에 동시에 값을 할당할 수 있다.  
 ```python
 >>> colors = ('red', 'blue')
 >>> c1, c2 = colors
@@ -266,7 +257,19 @@ from copy import *		#모듈 파트에서 다룰 예정. copy관련 함수를 쓸
 `blue'
 ```
 
->언패킹은 반복문과 궁합이 잘 맞다. 반복문 파트에서 코드예제를 추가하겠다.
+리스트도 동일한 방법으로 언패킹이 가능하다.  
+```python
+>>> fruits = ['apple', 'banana']
+>>> f1, f2 = fruits
+>>> print(f1)
+'apple'
+>>> print(f2)
+'banana'
+```
+
+>언패킹은 반복문과 궁합이 잘 맞다.   
+list1 = [(1, lewis), (2, john), (3, jacob)]   
+튜플로 이루어진 리스트를 순회하면서 각 튜플을 언패킹 하는 경우에 유용하다. 
 
 -
 
