--- a/23_SQL1 .md
+++ b/23_SQL1 .md
@@ -333,3 +333,214 @@ DELETE * FROM Customers;
 ```
 Customers 테이블의 모든 정보를 삭제한다. 되돌리기가 불가능하니 신중하게 해야한다.  
 
+-
+
+### Select Top
+특정 갯수의 데이터를 출력해주는데 사용된다.  
+DB의 사이즈가 클 때 한번에 많은 데이터를 출력하면 퍼포먼스에 악영향을 줄 수 있기 때문에 접근하는 데이터 수를 제한해주는 기능이다.  
+
+```sql
+SELECT TOP number|percent column_name(s)
+FROM table_name;
+```
+
+- SELECT TOP : 갯수를 입력해주거나, 전체 데이터에서의 비율을 입력할 수 있다.  
+
+```sql
+SELECT TOP 2 * FROM Customers;			//최상단 2개 데이터만 출력
+SELECT TOP 50 PERCENT * FROM Customers; //전체 개수에서 상위 50퍼센트 데이터만 출력
+```
+
+-
+
+LIKE Operator
+특정 문자열을 포함한 데이터를 찾을 때 사용한다.  
+
+```sql
+SELECT column_name(s)
+FROM table_name
+WHERE column_name LIKE pattern;
+```
+
+Customers 테이블의 City column에서 s로 시작하는 문자열을 찾는다고 하면  
+다음과 같이 쿼리문을 구성할 수 있다.  
+
+```sql
+SELECT * FROM Customers
+WHERE City LIKE 's%';
+```
+%는 나머지 패턴에 대한 모든 것을 수용하는 기호이다.  
+LIKE s는 s를 찾지만   
+LIKE s%는 s로 시작하는 모든 데이터를 찾아준다.  
+
+```sql
+SELECT * FROM Customers
+WHERE City LIKE '%s';
+```
+
+%s라고 명시할 경우 앞의 모든 내용을 포함하고 마지막에 s로 끝나는 데이터를 찾아준다.  
+
+```sql
+SELECT * FROM Customers
+WHERE Country LIKE '%land%';
+```
+%가 문자열 앞뒤로 붙을 경우 시작과 끝 상관없이 Country column에 land가 포함된 모든 데이터를 찾아준다.  
+
+```sql
+SELECT * FROM Customers
+WHERE Country NOT LIKE '%land%';
+```
+
+이전 예제가 land를 포함한 모든 데이터를 찾아준다면  
+NOT LIKE %land%는 반대로 land가 포함되지 않은 데이터를 찾아준다.  
+
+-
+
+### Wildcards  
+
+Wildcard|Description
+---|---
+%	|A substitute for zero or more characters
+_	|A substitute for a single character
+[charlist]	|Sets and ranges of characters to match
+[^charlist] |Matches only a character NOT specified within the brackets
+or [!charlist] | 
+
+wildcard는 LIKE Operator와 함께 쓰이며 이전에 %기호 처럼 찾고자 하는 단어의 옵션을 정해준다.  
+
+_ wildcard
+
+```sql
+SELECT * FROM Customers
+WHERE City LIKE '_erlin';
+```
+City column에서 'a'erlin, 'b'erlin, 'c'erlin, '1'erlin 처럼 erlin은 유지되면서 언더스코어가 있는 자리에 어떤 문자가 와도 찾아준다.  
+
+
+```sql
+SELECT * FROM Customers
+WHERE City LIKE '[bsp]%';
+```
+
+s%가 s로 시작하는 모든 단어를 찾는다면, [bsp]%는 b, s 또는 p로 시작하는 모든 단어를 찾아준다. Berlin, Strasbourg, Paris 등을 포함한 row가 출력된다.  
+
+```sql
+SELECT * FROM Customers
+WHERE City LIKE '[a-c]%';
+```
+
+이 경우 a부터 c까지의 알파벳을 의미한다. a, b 또는 c로 시작하는 모든 단어를 찾는다.
+
+```sql
+SELECT * FROM Customers
+WHERE City LIKE '[!bsp]%';
+```
+
+[bsp]%와 반대로 b, s 또는 p로 시작하지 않는 모든 단어를 출력한다.  
+LIKE '[!bsp]%' 대신에 NOT LIKE '[bsp]%'를 써도 같은 결과를 얻는다.  
+
+-
+
+### IN Operator
+WHERE clause로 데이터를 찾을 때 하나가 아닌 여러요소를 동시에 찾을 수 있게 해준다.  
+
+```sql
+SELECT column_name(s)
+FROM table_name
+WHERE column_name IN (value1,value2,...);
+```
+특정 column에서 value1, value2가 포함된 모든 row를 출력할 수 있다.  
+
+ 
+```sql
+SELECT * FROM Customers
+WHERE City IN ('Paris','London');
+```
+City column의 값이 'Paris'이거나 'London'인 경우 모두 보여준다.  
+
+-
+
+### BETWEEN Operator
+찾고자 하는 데이터의 범위를 지정해줄 수 있다.  
+
+```sql
+SELECT column_name(s)
+FROM table_name
+WHERE column_name BETWEEN value1 AND value2;
+```
+특정 column에서 value1과 value2 사이에 해당되는 데이터를 가진 모든 row를 출력한다. 
+
+```sql
+SELECT * FROM Products
+WHERE Price BETWEEN 10 AND 20;
+```
+Products 테이블의 Price column에서 값이 10과 20 사이인 데이터의 모든 정보를 출력한다.  
+
+>NOT BETWEEN으로 반대의 결과를 얻을 수 있다.  
+
+문자에도 사용할 수 있다. 
+
+```sql
+SELECT * FROM Products
+WHERE ProductName BETWEEN 'C' AND 'M';
+```
+
+ProductName이 C와 M사이의 모든 데이터를 출력한다.  
+
+>BETWEEN 10 AND 20이라고 했을 때는 10과 20이 모두 포함된다. 하지만, BETWEEN 'C' AND 'M'은 C로 시작하는 단어는 포함하지만 M으로 시작하는 단어는 포함하지 않는다. Ca는 C보다 크기 때문에 범위에 속하고 Ma는 M보다 크기 때문에 M이하라고 하면 범위에 속하지 않는다.  
+>
+>DBMS마다 결과값이 조금씩 다르다. BETWEEN 10 AND 20에서 10과 20을 포함하는 경우, 포함하지 않는 경우, 10만 포함하는 경우 등 결과값에 다소 차이가 발생한다. 잘 파악한 후 사용하도록 하자.  
+
+-
+
+### Aliases
+임시적으로 테이블이나 컬럼의 이름을 변경할 때 사용한다.   
+가독성을 높이는 목적으로 사용한다.  
+
+#### Column에 적용
+```sql
+SELECT column_name AS alias_name
+FROM table_name;
+```
+
+#### Table에 적용
+```sql
+SELECT column_name(s)
+FROM table_name AS alias_name;
+```
+
+두 개의 column에 대해 적용해보면 
+```sql
+SELECT CustomerName AS Customer, ContactName AS [Contact Person]
+FROM Customers;
+```
+![aliases](https://s23.postimg.org/5itrs7maj/image.png)
+
+기존의 column 이름이 변경되어서 출력된다.  
+>바꾸고자 하는 이름에 Contact Person처럼 공간이 띄워져 있다면 [ ]혹은 " "로 묶어주어야 한다.  
+
+```sql
+SELECT CustomerName, Address+', '+City+', '+PostalCode+', '+Country AS Address
+FROM Customers;
+```
+![aliases2](https://s27.postimg.org/rispa6ucj/image.png)
+
+Address, City, PostalCode, Country를 모두 합쳐서 Address로 정해주면 위와 같은 결과를 얻는다. Address안에 4개의 column 데이터가 합쳐져서 출력된다.  
+
+**테이블에 적용하면 구성은 조금 복잡해질 수 있으나 유용하게 사용할 수 있다.**  
+
+```sql
+SELECT o.OrderID, o.OrderDate, c.CustomerName
+FROM Customers AS c, Orders AS o
+WHERE c.CustomerName="Around the Horn" AND c.CustomerID=o.CustomerID;
+```
+
+![aliases3](https://s23.postimg.org/3rkbgph97/image.png)
+
+Customers는 c로, Orders는 o로 부르기로 한다. o.OrderID는 Orders 테이블의 OrderID column을 말한다. 결국 o.OrderID, o.OrderDate, c.CustomerName을 보여주려고 하고 데이터 필터링은 WHERE 구문으로 한다. 
+
+#### Aliases가 유용한 경우 
+- 쿼리문에 하나 이상의 테이블이 포함된 경우
+- 쿼리문에 함수가 사용될 경우
+- column 이름이 너무 길거나 가독성이 떨어질 경우
+- 두개 이상의 column이 합쳐지는 경우
