--- a/27_정규표현식.md
+++ b/27_정규표현식.md
@@ -434,3 +434,19 @@ extraordinarily
 finditer 함수를 사용하면 패턴에 해당되는 모든 문자열을 그룹화하여 리스트로 저장한다.  
 이를 반복문을 이용해 확인해볼 수 있다. 
 
+-
+
+```python
+s = '<html><body><h1>HTML</h1></body></html>'
+#<.*>라고 하면 최대탐색이기 때
+문에 끝까지 탐색.
+#<.*?>라고 하면 최소탐색.
+m = re.match(r'<.*>', s)
+print(m.group())
+m = re.match(r'<.*?>', s)
+print(m.group())
+
+#출력결과
+<html><body><h1>HTML</h1></body></html>
+<html>
+```
