템플릿디렉토리 위치 수정

--- a/30_장고기본세팅.md
+++ b/30_장고기본세팅.md
@@ -69,24 +69,6 @@ LANGUAGE_CODE = 'ko-kr'
 
 TIME_ZONE = 'Asia/Seoul'
 ```
-
-템플릿디렉토리 설정
-
-TEMPLATES_DIR은 상단에 BASE_DIR 쪽에 추가해주고 TEMPLATES의 'DIRS'에 추가해준다. 
-```
-TEMPLATES_DIR = os.path.join(BASE_DIR, 'templates')
-.
-.
-.
-
-TEMPLATES = [
-    {
-        'BACKEND': 'django.template.backends.django.DjangoTemplates',
-        'DIRS': [
-            TEMPLATES_DIR,
-        ],
-        'APP_DIRS': True,
-```
 manage.py가 위치한 디렉토리로 이동한다. django를 이용하여 app을 만든다.  
 ```
 python manage.py startapp polls
@@ -126,5 +108,26 @@ Quit the server with CONTROL-C.
 ```
 127.0.0.1:8000 주소로 'It Worked'를 확인한다. 
 
+-
 
+### 템플릿디렉토리 설정
 
+TEMPLATES_DIR은 상단에 BASE_DIR 쪽에 추가해주고 TEMPLATES의 'DIRS'에 추가해준다. 
+```
+TEMPLATES_DIR = os.path.join(BASE_DIR, 'templates')
+.
+.
+.
+
+TEMPLATES = [
+    {
+        'BACKEND': 'django.template.backends.django.DjangoTemplates',
+        'DIRS': [
+            TEMPLATES_DIR,
+        ],
+        'APP_DIRS': True,
+```
+
+### 소스루트 설정
+
+django-app 마우스 우클릭 :arrow_right: Mark Directory as :arrow_right: source root
