쿼리셋 반환하는 메소드 추가

--- a/33_쿼리셋_메소드(1).md
+++ b/33_쿼리셋_메소드(1).md
@@ -332,11 +332,121 @@ c = p.hometown       # Hits the database.
 #### prefetch_related()
 ManyToManyField나 ManyToOneField에도 사용 가능하다.
 
+
 #### extra()
 
-defer()  
-only()  
-using()  
-select_for_update()  
-raw()  
+복잡한 WHERE절을 표현하기 어려울 때 사용할 수 있다. 하지만, 기본 쿼리셋으로 표현가능하면 표현하고 정 안되면 extra()를 사용하기를 권장한다. 
+
+`select`  
+```python
+Entry.objects.extra(select={'is_recent': "pub_date > '2006-01-01'"})
+```
+각 Entry 객체의 발행일자가 2006년 1월 1일 이후인지 비교한 boolean값을 is_recent라는 키워드로 사용하겠다는 의미이다. 
+
+`where`  
+SQL구문의 WHERE절을 만드는데 활용한다. where의 각 요소는 AND로 이어진다. 
+```python
+Entry.objects.extra(where=["foo='a' OR bar = 'a'", "baz = 'a'"])
+```
+위의 문장에서 where안의 요소는 콤마로 구분하여 2가지 요소가 있다. foo와 bar는 OR로 연결되어 있지만 baz는 AND로 연결된다. 이를 SQL문으로 변형하면 다음과 같다. 
+
+```sql
+SELECT * FROM blog_entry WHERE (foo='a' OR bar='a') AND (baz='a')
+```
+
+`order_by`  
+
+extra를 이용하여 새로 추가한 내용에 대해 ordering옵션을 줄 수 있다. 
+
+```python
+q = Entry.objects.extra(select={'is_recent': "pub_date > '2006-01-01'"})
+q = q.extra(order_by = ['-is_recent'])
+```
+is_recent는 extra에 의해 생성되었기 때문에 extra의 order_by 옵션으로 정렬한다. 
+
+`params`  
+where를 사용할 때 매개변수 표현을 %s로 한다. 이 때, %s에 적용될 매개변수를 params에 적어주면 된다. 
+
+```python
+Entry.objects.extra(where=['headline=%s'], params=['Lennon'])
+```
+params는 `' '`안에 문자열을 입력한다. 
+
+#### defer()  
+쿼리셋으로 데이터베이스에 접근할 때 꺼내오지 않을 필드명을 선택한다.
+```python
+Entry.objects.defer("headline", "body")
+```
+Entry에서 headline과 body필드를 제외하고 나머지 정보만 불러온다. 말그대로 데이터베이스 접근을 미루는 것이다. 
+
+```python
+class CommonlyUsedModel(models.Model):
+    f1 = models.CharField(max_length=10)
+
+    class Meta:
+        managed = False
+        db_table = 'app_largetable'
+
+class ManagedModel(models.Model):
+    f1 = models.CharField(max_length=10)
+    f2 = models.CharField(max_length=10)
+
+    class Meta:
+        db_table = 'app_largetable'
+
+# Two equivalent QuerySets:
+CommonlyUsedModel.objects.all()
+ManagedModel.objects.all().defer('f2')
+```
+CommonlyUsedModel.objects.all()은 f1 필드밖에 없기 때문에 f1만 읽어온다. ManagedModel.objects.all().defer('f2')은 f1, f2필드가 있는데 f2를 defer시키기 때문에 f1만 불러온다. 따라서, 두 쿼리셋은 똑같이 f1만 불러오는 동작을 한다. 
+
+
+#### only()  
+defer()과 반대로 동작한다. 명시한 필드만 데이터베이스에서 접근한다. 
+
+필드가 age, biography, name만 있다고 가정하면 아래의 두 쿼리셋은 같은 필드에 접근한다.
+```python
+Person.objects.defer("age", "biography")
+Person.objects.only("name")
+```
+defer는 age, biography만 제외하고 가져오기 때문에 name만 가져오고 only는 명시한 필드인 name만 가져오기 때문에 같은 동작이다. 
+
+```python
+Entry.objects.only("body", "rating").only("headline")
+```
+only가 여러개 있으면 가장 나중에 호출된 only만 유효하다. 따라서 headline만 선택된다. 
+
+
+```python
+Entry.objects.only("headline", "body").defer("body")
+
+== Entry.objects.only("headline")
+```
+headline과 body에 only를 적용했지만 body에 대해서는 defer가 다시 적용되었기 때문에 결국 only('headline')과 같다. 
+
+```python
+Entry.objects.defer("body").only("headline", "body")
+
+== Entry.objects.only("headline", "body")
+```
+only는 앞의 내용을 재정의한다. 
+
+
+#### using()  
+...
+
+#### select_for_update()  
+...
+
+#### raw()  
+SQL쿼리문을 매개변수로 받아서 동작을 처리한다. 
+```python
+>>> for p in Person.objects.raw('SELECT * FROM myapp_person'):
+...     print(p)
+John Smith
+Jane Jones
+```
+Person.objects.raw('SELECT * FROM myapp_person')에서 쿼리문은 mypp_person 테이블의 모든 데이터를 선택한다. 이 코드는 Person.objects.all()과 동일하게 동작한다. 이것만 보면 raw()의 장점을 많이 발견할 수 없지만 쿼리문을 다양하게 구성하면 강력한 옵션을 제공할 수 있다.  
+[raw() 더 알아보기](https://docs.djangoproject.com/en/1.10/topics/db/sql/)
+
 
