인스타그램 detail, list 추가

--- a/37_인스타그램_구현(2).md
+++ b/37_인스타그램_구현(2).md
@@ -37,6 +37,8 @@ MyUserManager는 MyUser 모델을 관리해준다. 기본관리자인 BaseUserMa
 
 `MyUserManager`는 BaseUserManager의 내용을 상속받고, 일반유저와 슈퍼유저를 생성하는 기능을 담당한다. create_user와 create_superuser는 구조는 같으나 채워지는 속성값이 조금씩 다르다. 일반유저의 경우, username와 password만 설정된다. superuser는 관리자, 운영진의 개념에 속하기 때문에 is_staff, is_superuser의 속성에 True값을 주어야 그에 따른 역할을 수행할 수 있다. 
 
+> user.password = password라고 작성하지 않도록 유의한다. 
+
 ```python
 
 class MyUser(PermissionsMixin, AbstractBaseUser):
@@ -71,6 +73,8 @@ class MyUser(PermissionsMixin, AbstractBaseUser):
     #     return True
 ```
 MyUser는 두 클래스를 상속받는다. AbstractBaseUser 클래스를 상속받으면서 기본값인 password, last_login, is_active 필드를 가져온다. 따라서 추가적인 정의가 필요없다. 커스터마이징을 하면서 유저모델에 원하는 필드를 추가하는 것에 큰 목적이 있기 때문에 MyUser 모델에 다른 요소들을 필드로 정의한다. 
+
+> MyUser로 User를 오버라이드 하기 전에 migrate하면 나중에 에러가 발생한다. 에러가 발생했을 때 데이터베이스 파일을 지우고 다시 migrate하거나 아예 재정의 후에 migrate를 한다. 
 
 ```python
 ### class AbstractBaseUser
