댓글 추가 폼

--- a/39_인스타그램_구현(3).md
+++ b/39_인스타그램_구현(3).md
@@ -121,41 +121,66 @@ def post_detail(request, post_id):
 
 
 ### 댓글 추가하기 (form 다루기)
-리스트페이지와 세부페이지에서 각각 댓글을 추가하면 원래 있던 페이지로 돌아가야 한다. 먼저 세부페이지에서 어떻게 댓글을 추가하는지
+리스트페이지와 세부페이지에서 각각 댓글을 추가하면 원래 있던 페이지로 돌아가야 한다. 먼저 세부페이지(detail)에서 어떻게 댓글을 추가하는지 살펴보자
 
+> templates/post/post_detail.html
 
+```html
+<form action="{% url 'post:comment_add' post_id=post.id%}" method="post">{% csrf_token %}
+        <div>{{ form.content }}</div>
+        <button type="submit">Write Comment</button>
+    </form>
+```
+form의 액션에서는 url을 역참조해서 urls.py에 있는 정규표현식을 사용한다. 그리고 comment_add 뷰에서는 post_id를 인자값으로 가지기 때문에 역참조할 때 함께 넘겨준다. form.content는 forms.py에서 CommentForm이 Comment를 모델로 사용하기 때문에 content는 결국 comment.content가 된다. content는 텍스트필드이기 때문에 form.content는 텍스트필드로 화면에 나타난다.
 
+> templates/post/post_list.html
 
-
-
-
-
+```html
+<form action="{% url 'post:comment_add' post_id=post.id %}" method="post">{% csrf_token %}
+        <div>{{ form.content }}</div>
+        <!--<input type="text" name="content">-->
+        <button type="submit" name="list" value="{{ post.id }}">Write Comment</button>
+    </form>
+```
+detail에서 댓글을 추가하는 프로세스와 거의 비슷하다. 버튼을 자세히 보면 name='list' value='{{ post.id }}'라는 옵션이 추가되었다. submit을 할 때 form에 대한 정보는 request.POST에 뷰로 보내진다. request.POST를 뷰에서 출력하면 다음과 같다. 
 
 ```
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<QueryDict: {'csrfmiddlewaretoken': ['L0JfCrCedIUyAsJOEyLzkUwFjOihsVaIXzTn916zl2Ua1PPPynpqXQA41QcDtkdL'], 'content': ['22'], 'list': ['3']}>
 ```
+해쉬된 키값을 제외하고 'content': ['22'], 'list': ['3'] 값들을 자세히 볼 필요가 있다. content는 텍스트필드에 입력한 내용이 담기고, button에서 'name':value 형식으로 딕셔너리 필드에 추가된다. 따라서 현재 누르는 버튼에 새로운 정보를 추가할 수 있다는 말이 된다. 댓글은 list에서 추가할 수 있고, detail에서 추가할 수 있다. 만약 request.POST에 'list'라는 키값이 포함되었다면 리스트에서 댓글을 추가한 것이다. 하지만 list는 detail과 달리 post id를 바로 받을 수 없다. 그렇기 때문에 submit 버튼이 생성될 때 post_id를 value값에 같이 심어준다. 
+
+### 댓글추가하기 (view)
+
+> post/views.py
+
+```python
+
+def comment_add(request, post_id):
+    if request.method == 'POST':
+        data = request.POST
+        form = CommentForm(data=data)
+        # HttpRequest에는 항상 User정보가 전달된다.
+        user = request.user
+        if 'list' in request.POST:							#1
+            post = Post.objects.get(id=data['list'][0])
+        else:
+            post = Post.objects.get(id=post_id)
+
+        # 이걸로 한번에 추가해줘도 됨
+        # post.add_comment(user, content)
+        if form.is_valid():									#2
+            content = form.cleaned_data['content']
+            comment = Comment.objects.create(				#3
+                author=user,
+                post=post,
+                content=content
+            )
+            if 'list' in request.POST:						#4
+                return redirect('post:list')
+            return redirect('post:detail', post_id=post_id)
+```
+form에서 submit을 하면 request를 통해 정보가 넘어온다. 만약 POST방식으로 넘겨진 데이터면 댓글을 실어서 온다고 간주하기 때문에 댓글추가작업을 진행한다. 위에서 살펴봤듯이 list에서 넘어온 데이터는 list 키값을 request.POST에 포함하고 있다. 1번은 어디서 온 form인지를 구분하여 post객체를 생성한다. detail에서 왔다면 특정 키값을 인자값으로 바로 가져오기 때문에 post_id를 사용하고, list에서 왔다면 'list'의 value값으로 온다. 
+
+form이 유효한지 판단하면 진행하도록 2번에서 조건을 걸어준다. 3번은 1번에서 생성된 post객체를 이용하여 comment가 참조할 post를 지정해준다. 그리고 마지막으로 list에서 왔다면 다시 list로 그리고 detail에서 왔다면 detail로 redirect처리를 해준다. 
 
 
