비교 부분 추가

--- a/40_인스타그램_구현(4).md
+++ b/40_인스타그램_구현(4).md
@@ -154,4 +154,6 @@ def comment_delete(request, post_id, comment_id):
 ```
 댓글의 작성자와 로그인유저가 동일한지 판단하고 `True`이면 comment.delete()를 실행한다. 동일하지 않을 경우 삭제되지 않는다. 처리가 끝나면 다시 리스트페이지로 보낸다. 
 
+> 위의 판단을 if comment.author.id == request.user.id: ID로 처리하면 더 확실하다. 
+
 
