회원가입 내용 추가

--- a/41_인스타그램_구현(5).md
+++ b/41_인스타그램_구현(5).md
@@ -38,3 +38,127 @@ author = models.ForeignKey(MyUser)  #(x)
 author = models.ForeignKey(settings.AUTH_USER_MODEL)  #(o)
 ```
 커스텀 유저 모델을 사용할 때 직접 모델을 가져다 쓰지 말고 설정값에 있는 모델을 참조해야한다. 설정값을 사용하면 커스텀 모델이나 기본 모델 중 어느 것을 사용하더라도 커버를 해준다. 변경하지 않아도 동작하지만 유저모델은 항상 settings에서 명시한 모델을 참조하도록 권장한다. 
+
+-
+
+
+### 회원가입폼 만들기
+
+회원가입폼은 다음 model-view-controller에 의해 생성된다.
+
+> templates/member/signup.html	[view]  
+> member/forms.py (SignupForm)  [model]  
+> member/views.py (signup_view)  [controller]
+
+```python
+class SignupForm(forms.Form):
+    username = forms.CharField(max_length=30)
+    nickname = forms.CharField(max_length=30, required=False)
+    password = forms.CharField(max_length=30, widget=forms.PasswordInput)
+    password2 = forms.CharField(max_length=30, widget=forms.PasswordInput)
+    email = forms.EmailField(max_length=40, required=False)
+    gender = forms.ChoiceField(choices=MyUser.CHOICES_GENDER)
+
+    def clean_username(self):
+        username = self.cleaned_data['username']
+        if MyUser.objects.filter(username=username).exists():
+            raise forms.ValidationError('username already exists')
+        return username
+
+    def clean_password2(self):
+        password = self.cleaned_data['password']
+        password2 = self.cleaned_data['password2']
+        validate_password(password)
+        if password != password2:
+            raise forms.ValidationError('passwords are not matched')
+        return password
+
+    def create_user(self):
+        username = self.cleaned_data['username']
+        password = self.cleaned_data['password']
+        password2 = self.cleaned_data['password2']
+        email = self.cleaned_data['email']
+        gender = self.cleaned_data['gender']
+        nickname = self.cleaned_data['nickname']
+
+        user = MyUser.objects.create(
+            username=username,
+            password=password2,
+        )
+        user.email = email
+        user.gender = gender
+        user.nickname = nickname
+        user.save()
+```
+모델폼을 먼저 살펴보자. 유저이름, 닉네임, 비밀번호, 이메일, 성별 등의 요소들이 정의되어있다. required=False는 blank=True와 같은 역할을 한다. widget=forms.PasswordInput은 입력시 입력한 내용이 * 모양으로 가려지도록 한다. 
+
+회원가입시 아이디가 중복되는지 비밀번호가 적절한지에 대한 검증작업을 해야한다. 변수에 값이 할당될 때 `clean_변수명`형태의 메소드가 실행된다. 메소드를 오버라이드 하지 않으면 아무 작업도 되지 않는다. `clean_username`과 `clean_password2`가 검증하는 메소드를 오버라이드 한다. `clean_username`은 현재 유저모델의 객체로 입력받은 유저이름이 존재하면 에러를 발생시키도록한다. `clean_password2`는 두개의 패스워드가 서로 같은지, 그리고 적절한 패스워드인지 검증한다. password가 아니라 password2인 이유는, password를 먼저 입력 받았을 때 메소드가 실행될 경우 password2가 존재하지 않는 상태이기 때문에 두 비밀번호를 모두 받은 상태에서 비교한다. validate_password(password)는 장고에서 기본적으로 제공하는 검증메소드를 사용한다. 
+
+create_user는 새로 만드려고 하는 유저의 모든 정보를 이용하여 새로운 객체를 생성하고 저장한다. 
+
+위의 메소드에서 self로 쓰이는 부분은 view에서 넘겨주는 정보에 의해 결정된다. 
+
+view를 살펴보자. 
+
+```python
+def signup_view(request):
+    if request.method == 'POST':
+        form = SignupForm(data=request.POST)
+        if form.is_valid():
+            user = form.create_user()
+            login(request, user)
+            return redirect('post:list')
+    else:
+        form = SignupForm()
+    context = {
+        'form': form,
+    }
+    return render(request, 'member/signup.html', context)
+```
+form = SignupForm(data=request.POST)는 html에서 POST 방식으로 넘겨준 데이터를 기반으로 SignupForm 객체를 만든다. 그 폼이 유효할 경우 새로운 유저를 생성하고 에러 발생 없이 생성이 완료되면 새로운 유저로 로그인을 한다. 다시 리스트뷰로 redirect한다. 
+
+```html
+{% extends 'common/base.html' %}
+
+{% block content %}
+
+<div class="signup-container">
+    <form action="" method="post">{% csrf_token %}
+        {% if form.non_field_errors %}
+        {{ form.non_field_errors }}
+        {% endif %}
+
+        {% for field in form %}
+        <div>
+            {{ field.label_tag }}
+            {{ field }}
+            {{ field.errors }}
+        </div>
+        {% endfor %}
+        <button type="submit">Login</button>
+    </form>
+</div>
+{% endblock %}
+```
+html은 view로부터 넘겨받은 form객체의 요소를 통해 내용을 구성한다. 그리고 최종적으로 submit버튼을 통해 다시 view로 넘겨준다. 구성된 화면은 다음과 같다.
+
+![image2](https://s32.postimg.org/4odnvvbud/0219_1.png)
+
+> action을 비웠는데 어떤 url로 가는지 어디서 결정되는지..
+
+-
+
+### 흐름정리
+1. http://localhost:8000/member/signup/로 접속한다. 
+2. url(r'signup/$', views.signup_view, name='signup')에 의해 signup_view로 보내진다.
+3. POST방식으로 받지 않았기 때문에 else로 이동한다. 
+4. 빈 form객체를 만들고 이를 context라는 이름의 딕셔너리로 만든다. 
+5. context를 signup.html과 렌더링한다. 
+6. signup.html에서 정보가 채워지고 submit이 되면 다시 signup_view로 간다.
+7. POST방식으로 받았기 때문에 if로 이동한다. 
+8. 넘겨받은 데이터를 이용하여 SignupForm객체를 생성한다. 
+9. 생성시 username과 password의 검증작업을 진행한다. 
+10. 유저를 생성한다.
+11. 생성된 유저로 로그인한다. 
+12. 리스트 페이지로 redirect한다.
+
