--- a/58_API(1).md
+++ b/58_API(1).md
@@ -12,9 +12,11 @@
 .conf, .conf-secret, settings.py(config), git, requirements.txt...
 ```
 
-member 앱을 생성하고 MyUser모델이 AbstractUser를 상속받도록 한다. 그리고 settings.py에서 AUTH_USER_MODEL을 설정한다. 
+member 앱을 생성하고 MyUser모델이 AbstractUser를 상속받도록 한다. 그리고 settings.py에서 `AUTH_USER_MODEL`을 설정한다. 
 
 -
+
+### model
 
 인스타그램처럼 하나의 글에 사진 여러장이 올라갈 수 있도록 설계한다. 
 
@@ -34,14 +36,49 @@ class PostPhoto(models.Model):
 ```
 
 ImageField를 활용하기 위해 pillow를 설치한다.
+
 ```
 pip install pillow
 ```
-모델을 구성했으니 migration을 하고 커밋.
+
+모델을 구성했으니 migration을 하고 커밋
+
 ```
 MODE='DEBUG' ./manage.py makemigrations
 
 git commit -a -m 'InstagramAPI - Post, PostPhoto 모델 추가 및 migration 생성'
 ```
 
+-
+
+### order_with_respect_to
+
+현재 PostPhoto가 Post에 연결된 것은 확인되지만 연결된 목록의 인덱스가 따로 지정되어 있지 않다.
+
+PostPhoto에 다음을 추가한다
+
+```
+class Meta:
+    order_with_respect_to = 'post'
+```
+
+order_with_respect_to는 ForeignKey에 대해 순서를 붙일 수 있도록 한다.
+
+이 설정이 되면 `get_RELATED_order()`와 `set_RELATED_order()`함수가 자동적으로 추가된다. 여기서 RELATED는 연결되어 있는 모델명의 소문자형태이다.
+
+따라서, 현재 PostPhoto에 연결되어 있기 때문에 get_postphoto_order형태가 된다.
+
+psycopg2가 설치되어 있지 않다면 설치하도록 한다.
+
+```
+pip install psycopg2
+```
+migrations를 생성하고 커밋.
+
+```
+git commit -a -m 'InstagramAPI - PostPhoto에 
+order_with_respect_to Meta옵션 설정 및 migrations 생성'
+```
+
+-
 
