58. API(1) : view 부분 추가

--- a/58_API(1).md
+++ b/58_API(1).md
@@ -14,7 +14,7 @@
 
 member 앱을 생성하고 MyUser모델이 AbstractUser를 상속받도록 한다. 그리고 settings.py에서 `AUTH_USER_MODEL`을 설정한다. 
 
---
+---
 
 ### model
 
@@ -27,12 +27,12 @@ post 앱을 생성한다.
 ```
 class Post(models.Model):
 	author = models.ForeignKey(Settings.AUTH_USER_MODEL)
-    created_date = models.DateTimeField(auto_now_add=True)
+	created_date = models.DateTimeField(auto_now_add=True)
     
     
 class PostPhoto(models.Model):
 	post = models.ForeignKey(Post)
-    photo = models.ImageField(upload_to='post')
+	photo = models.ImageField(upload_to='post')
 ```
 
 ImageField를 활용하기 위해 pillow를 설치한다.
@@ -49,7 +49,7 @@ MODE='DEBUG' ./manage.py makemigrations
 git commit -a -m 'InstagramAPI - Post, PostPhoto 모델 추가 및 migration 생성'
 ```
 
---
+---
 
 ### order_with_respect_to
 
@@ -62,13 +62,13 @@ class Meta:
     order_with_respect_to = 'post'
 ```
 
-order_with_respect_to는 ForeignKey에 대해 순서를 붙일 수 있도록 한다.
+order_with_respect_to는 ForeignKey에 대해 순서를 붙여준다.
 
 이 설정이 되면 `get_RELATED_order()`와 `set_RELATED_order()`함수가 자동적으로 추가된다. 여기서 RELATED는 연결되어 있는 모델명의 소문자형태이다.
 
 따라서, 현재 PostPhoto에 연결되어 있기 때문에 get_postphoto_order형태가 된다.
 
-psycopg2가 설치되어 있지 않다면 설치하도록 한다.
+psycopg2가 설치되어 있지 gi않다면 설치하도록 한다.
 
 ```
 pip install psycopg2
@@ -82,3 +82,56 @@ order_with_respect_to Meta옵션 설정 및 migrations 생성'
 
 ---
 
+### view
+
+post_craete 뷰는 다음 동작을 수행한다.
+
+```
+request.Post로 전달된 author_id를 받아 새 Post를 생성한다.  
+생성된 post의 id값을 HttpResponse로 반환한다. 
+받은 author_id에 해당하는 MyUser객체를 가져오는데 없다면 해당 User가 없음을 반환한다.
+```
+
+> model/views.py
+
+```
+User = get_user_model()
+
+@csrf_exempt    #API로 요청할 때 csrf 해제, 누구나 접근 가능한 상태.
+def post_create(request):
+    if request.method == 'POST':
+        try:
+            author_id = request.POST['author_id']
+            author = User.objects.get(id=author_id)
+        except KeyError as e:
+            return HttpResponse('key "author_id" is required field')
+        except User.DoesNotExist:
+            return HttpResponse('author_id {} does not exist'.format(
+                request.POST['author_id']
+            ))
+            
+        post = Post.objects.create(author=author)
+        return HttpResponse('{}'.format(post.pk))
+    else:
+        return HttpResponse('Post create view')
+```
+
+url을 연결한다.
+
+> config/urls.py
+
+```
+url(r'^post/', include('post.urls'))
+```
+
+> post/urls.py
+
+```
+url(r'^post/create/$', views.post_create, name='create')
+```
+
+runserver를 실행해서 잘 나오는지 확인해본다.
+
+`localhost:8000/post/create/`라는 명령어를 입력했을 때 Post create view라는 메시지가 나와야 한다.
+
+현재 GET방식으로 보내는 상황이기 때문에 view에서 else로 간 상태이다.
