Insta API - 디버그모드 실행 스크립트 추가

--- a/58_API(1).md
+++ b/58_API(1).md
@@ -127,7 +127,7 @@ url(r'^post/', include('post.urls'))
 > post/urls.py
 
 ```
-url(r'^post/create/$', views.post_create, name='create')
+url(r'^create/$', views.post_create, name='create')
 ```
 
 runserver를 실행해서 잘 나오는지 확인해본다.
@@ -135,3 +135,65 @@ runserver를 실행해서 잘 나오는지 확인해본다.
 `localhost:8000/post/create/`라는 명령어를 입력했을 때 Post create view라는 메시지가 나와야 한다.
 
 현재 GET방식으로 보내는 상황이기 때문에 view에서 else로 간 상태이다.
+
+---
+
+### CustomScripts
+
+이번에는 매번 불편하게 길게 입력했던 runserver 명령을 script로 간소화해보자. 
+
+```
+MODE='DEBUG' ./manage.py runserver
+-->
+manage -d runserver
+```
+
+위와 같이 manage -d runserver 만으로 긴 명령을 처리할 수 있다. 스크립트 방식의 장점은 코드를 다 살펴보고 다시 알아보자.
+
+우선 script 디렉토리에서 manage 파일에 대한 내용을 작성한다.
+
+```
+vi ~/.scripts/manage
+
+#!/bin/bash
+
+while getopts "d" opt
+do
+	case $opt in
+		d) mode='DEBUG';;
+	esac
+done
+
+manageCommand="MODE='$mode' ./manage.py ${@:OPTIND}"
+echo $manageCommand
+eval $manageCommand
+```
+파일을 작성하고 권한을 재설정한다. 
+
+```
+chmod 755 ~/.scripts/manage
+```
+
+zshrc에서도 script에 대한 경로를 설정한다.
+
+```
+vi ~/.zshrc
+
+export CustomScript="/Users/lewis/.scripts"
+export PATH="$PATH:$CustomScripts"
+```
+
+세팅이 완료되면 source ~/.zshrc로 변경사항을 반영한다. 
+
+현재는 디버그 모드에서 서버를 실행하려고 하는 설정만 했다. 나중에는 디버그 모드로 실행시 서버는 리모트 혹은 로컬 중에 선택하는 명령 등 다양한 옵션을 간단하게 추가할 수 있다. 스크립트로 처음에 짜는 것이 귀찮을 수 있지만 나중에 작업이 원활히 진행될 수 있도록 도와준다.
+
+---
+
+
+
+
+
+
+
+
+
