Insta API - post_photo_add view 추가

--- a/58_API(1).md
+++ b/58_API(1).md
@@ -189,6 +189,51 @@ export PATH="$PATH:$CustomScripts"
 
 ---
 
+### Postman에서 /post/create 요청하기
+
+현재 Postman에서 요청을 할 수 있는 url은 다음과 같다.
+
+![postman-craete](./images/0317-1.png)
+
+/post/create/ 에서 POST요청을 받으면 생성하는 루틴으로 진입한다. 이 때 author_id가 반드시 필요하기 때문에 Body 탭에서 값을 채워준다. Send를 누르면 화면의 맨 아래처럼 생성된 post의 id가 출력된다.
+
+---
+
+### post_photo_add view
+
+post id, photo를 받아서 PostPhoto 객체를 생성한다. 이후 post_id와 post에 연결된 photo들의 id값을 반환한다.
+
+> post/views.py
+
+```
+@csrf_exempt
+def post_photo_add(request):
+    if request.method == 'POST':
+        try:
+            post_id = request.POST['post_id']
+            photo = request.FILES['photo']
+            post = Post.objects.get(id=post_id)
+        except KeyError:
+            return HttpResponse('post_id and photo are required fields')
+        except Post.DoesNotExist:
+            return HttpResponse('post_id {} is not exist'.format(
+                request.POST['post_id']
+            ))
+        PostPhoto.objects.create(
+            post=post,
+            photo=photo
+        )
+        return HttpResponse('Post: {}, PhotoList: {}'.format(
+            post.id,
+            [photo.id for photo in post.postphoto_set.all()]
+        ))
+    else:
+        return HttpResponse('Post photo add view')
+```
+
+이 view에 대한 url을 설정한다. 
+
+
 
 
 
