Insta API - photo add 부분 url 추가, postman 테스트 내용 추가

--- a/58_API(1).md
+++ b/58_API(1).md
@@ -233,6 +233,20 @@ def post_photo_add(request):
 
 이 view에 대한 url을 설정한다. 
 
+> post/urls.py
+
+```
+url(r'^photo/add/$', views.post_photo_add, name='photo_add'),
+```
+
+postman에서 테스트 해본다. 
+
+![0317-2](./images/0317-2.png)
+
+view에서 필요한 데이터는 post_id와 photo다. postman에서 Body탭에서 해당 데이터를 설정해준다. 여기서 photo는 우측에 `Text`버튼을 누르면 `File`로 변경할 수 있다. `File`모드에서 원하는 이미지를 로드하고 Send하면 하단과 같이 1번 Post의 photolist를 출력한다. (현재는 Send를 두번 누른 상태라서 1,2가 출력되었다.)
+
+
+
 
 
 
